fix: Fix StatProviderFilterMap using `Collections#unmodifiable*` and changing on us during recursing methods